--- a/nodejs-helloworld/package.json
+++ b/nodejs-helloworld/package.json
@@ -4,7 +4,9 @@
   "description": "Hello World!",
   "main": "app.js",
   "author": "Red Hat Training",
-  "script": "start node app.js",
+  "scripts": {
+	  "start":  "node app.js"
+  }
   "license": "ASL",
   "dependencies": {
     "express": "4.14.x"
